<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014-2015 Project Chronos and Pramantha Ltd
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">Xploration Reader</string>

    <!-- Activities titles -->
    <string name="title_activity_articles">Articles</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Activity Articles -->
    <string name="empty_article_list">There are no articles yet for you</string>
    <!-- TODO: improve -->
    <string name="connection_error">There is no connection</string>
    <string name="captive_error">You are not online, maybe you are in a captive network, please sign-in</string>

    <!-- Article card -->
    <string name="date_full">%1$s (stored %2$s)</string>
    <string name="date_mini">stored %1$s</string>
    <string name="agency_icon_description">Agency icon</string>

    <!-- Article menu -->
    <string name="search_action">Search</string>
    <string name="sort_action">Sort</string>
    <string name="filter_action">Filter</string>
    <string name="add_section_action">Add section</string>

    <string name="fb_posts_filter">Facebook posts</string>
    <string name="medias_filter">Images</string>
    <string name="links_filter">Links</string>
    <string name="pdf_filter">PDF</string>
    <string name="papers_filter">Papers</string>
    <string name="movies_filter">Movies</string>
    <string name="feeds_filter">Articles</string>
    <string name="tweets_filter">Tweets</string>
    <string name="all_filter">All</string>

    <string name="ascending_order_date">Ascending order</string>
    <string name="descending_order_date">Descending order</string>
    <string name="no_order_date">No order</string>

    <!-- Settings -->
    <string name="pref_header_sections">Sections</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="pref_title_add_section">Add section</string>
    <string name="pref_hint_add_section">Enter the section name</string>
    <string name="pref_section_name">Section name</string>
    <string name="pref_type_selection">Types selection</string>

</resources>
