<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014-2015 Project Chronos and Pramantha Ltd
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uk.projectchronos.xplorationreader.ArticlesActivity">

    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_action_filter_list"
        android:title="@string/filter_action"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/feeds_filter"
                android:title="@string/feeds_filter" />

            <item
                android:id="@+id/medias_filter"
                android:title="@string/medias_filter" />

            <item
                android:id="@+id/links_filter"
                android:title="@string/links_filter" />

            <item
                android:id="@+id/pdf_filter"
                android:title="@string/pdf_filter" />

            <item
                android:id="@+id/papers_filter"
                android:title="@string/papers_filter" />

            <item
                android:id="@+id/movies_filter"
                android:title="@string/movies_filter" />

            <item
                android:id="@+id/tweets_filter"
                android:title="@string/tweets_filter" />

            <item
                android:id="@+id/fb_post_filter"
                android:title="@string/fb_posts_filter" />

            <item
                android:id="@+id/all_filter"
                android:title="@string/all_filter" />

        </menu>

    </item>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_action"
        app:showAsAction="ifRoom" />

</menu>
