<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2014-2015 Project Chronos and Pramantha Ltd
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            style="@style/preference_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/preference_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/preference_item_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/pref_section_name" />

                <EditText
                    android:id="@+id/section_name_edit_text"
                    style="@style/preference_item_edit_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pref_hint_add_section"
                    android:inputType="textNoSuggestions|textCapWords"
                    android:maxLength="32"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                style="@style/preference_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/preference_item_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/pref_type_selection" />

                <LinearLayout
                    android:id="@+id/type_list_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>